--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "back",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -14,6 +13,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1"
   }
 }
